samples/_failures_safe/1761542505_fb5882_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d5cdf849.c: In function ‘main’:
./samples/SAFE/__tmp_d5cdf849.c:153:5: error: expected expression at end of input
  153 |     for (int i =
      |     ^~~
./samples/SAFE/__tmp_d5cdf849.c:153:5: error: expected declaration or statement at end of input
